Added keybindings need help finding my error

--- a/src/main/resources/assets/teleportmod/lang/en_US.lang
+++ b/src/main/resources/assets/teleportmod/lang/en_US.lang
@@ -1,7 +1,12 @@
+#Keys
+keys.teleportmod.category=Teleport Mod
+keys.teleportmod.get_coordinates=Get Coordinates
+
+#CreativeTabs
+itemGroup.teleportMod=Teleport Mod
+
 #Items
 item.coordinateCache.name=Coordinate Cache
 
 #Blocks
 tile.teleporter.name=Teleporter
-
-#Guis
